--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+		
+        /* Estilo para las imágenes con ajuste proporcional */
+        .image.fit img {
+            width: 100%; /* La imagen ocupa todo el ancho disponible */
+            height: 400px; /* Mantiene la proporción de la imagen */
+            max-height: 400px; /* Limita la altura máxima de la imagen */
+            object-fit: 300px; /* Evita el recorte y ajusta la imagen dentro del contenedor */
+        }
+
+        /* Estilo para el contenedor de la imagen */
+        .image.fit {
+            width: 100%; /* El contenedor ocupa todo el ancho disponible */
+            max-width: 800px; /* Limita el tamaño máximo del contenedor */
+            margin: 10px auto; /* Centra el contenedor en la página */
+            display: block;
+        }
+
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -21,7 +40,7 @@
 					<div id="intro">
 						<h1>Rodolfo Olivares<br />
 						Portfolio</h1>
-						<p>Data Analyst con experiencia en SQL, Power BI y R<a href="https://html5up.net/license"></a>.</p>
+						<p>Data Analyst con experiencia en R, Python, SQL y Power BI<a href="https://html5up.net/license"></a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -36,7 +55,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Mis Proyectos</a></li>
-							<li><a href="elements.html">Sobre Mí</a></li>
+							<li><a href="about.html">Sobre Mí</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/fitolivares" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -70,19 +89,21 @@
 										<h2><a href="#">Limpieza y<br />
 											transformación de datos</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/datacleaning.png" alt="" /></a>
-									<p>Proyecto que muestra paso a paso como podemos limpiar y transformar bases de datos completamente sucias.</p>
+									<a href="https://github.com/rolivaresIA/Data_Cleaning_Project" class="image fit"><img src="images/datacleaning.png" alt="" /></a>
+									<p style="text-align: center;">Proyecto que muestra paso a paso como podemos limpiar y transformar bases de datos completamente sucias para un Ecommerce.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Proyecto Completo</a></li>
+										<li><a href="https://github.com/rolivaresIA/Data_Cleaning_Project" class="button">Proyecto Completo</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Análisis de datos <br />
-										exploratorio</a></h2>
+										<h2><a href="#">Análisis exploratorio de datos en Twitch <br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/8.webp" alt="" /></a>
-									<p>Proyecto que muestra paso a paso como podemos hacer análisis exploratorio en una base de datos.</p>
+									<a href="#" class="image fit"><img src="images/Twitch_Main.png" alt="" /></a>
+									<p style="text-align: center;">Proyecto que muestra paso a paso como podemos hacer análisis exploratorio en una base de datos. Se trabaja con datos de 
+										Twitch.
+									</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Proyecto Completo</a></li>
 									</ul>
@@ -93,7 +114,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/el-poder-de-la-visualizacion-diseno-de-dashboards-y-visualizacion-de-datos.webp" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p style="text-align: center;">Proyecto que ilustra cómo transformar grandes volúmenes de datos en visualizaciones interactivas y comprensibles para la toma de decisiones en un negocio.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Proyecto Completo</a></li>
 									</ul>
@@ -103,8 +124,8 @@
 										<h2><a href="#">Webscraping utilizando R<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/r_web_scraping_53e5ebc978.webp" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/Web-Scraping-With-R.png" alt="" /></a>
+									<p style="text-align: center;">Proyecto que demuestra cómo utilizar R para extraer, limpiar y analizar datos de diversas fuentes web, transformándolos en información útil y estructurada.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Proyecto Completo</a></li>
 									</ul>
