--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Limpieza y<br />
+										<h2><a href="https://github.com/rolivaresIA/Data_Cleaning_Project">Limpieza y<br />
 											transformación de datos</a></h2>
 									</header>
 									<a href="https://github.com/rolivaresIA/Data_Cleaning_Project" class="image fit"><img src="images/datacleaning.png" alt="" /></a>
@@ -151,22 +151,25 @@
 
 					</div>
 
-						<!-- Footer -->
+						<!- Footer -->
 						<footer id="footer" style="margin-top: 0; padding-top: 10px; width: 100%; box-sizing: border-box; color: #212931;">
 							<section style="text-align: left;">
-								<form method="post" action="#" style="color: #212931;">
+								<form method="get" action="mailto:rodolivares1@gmail.com" enctype="text/plain" style="color: #212931;">
 									<div class="fields">
 										<div class="field">
 											<label for="name" style="color: #212931;">Nombre</label>
-											<input type="text" name="name" id="name" style="border: 1px solid #212931; color: #212931;" />
+											<input type="text" name="name" id="name" 
+												style="border: 1px solid #212931; color: #212931;" required />
 										</div>
 										<div class="field">
 											<label for="email" style="color: #212931;">Email</label>
-											<input type="text" name="email" id="email" style="border: 1px solid #212931; color: #212931;" />
+											<input type="email" name="email" id="email" 
+												style="border: 1px solid #212931; color: #212931;" required />
 										</div>
 										<div class="field">
 											<label for="message" style="color: #212931;">Mensaje</label>
-											<textarea name="message" id="message" rows="3" style="border: 1px solid #212931; color: #212931;"></textarea>
+											<textarea name="message" id="message" rows="3" 
+												style="border: 1px solid #212931; color: #212931;" required></textarea>
 										</div>
 									</div>
 									<ul class="actions">
