--- a/index.html
+++ b/index.html
@@ -90,22 +90,20 @@
 											transformación de datos</a></h2>
 									</header>
 									<a href="https://github.com/rolivaresIA/Data_Cleaning_Project" class="image fit"><img src="images/datacleaning.png" alt="" /></a>
-									<p style="text-align: center;">Proyecto que muestra paso a paso como podemos limpiar y transformar bases de datos completamente sucias para un Ecommerce.</p>
+									<p style="text-align: center;">Proyecto enfocado a la limpieza y transformación de bases de datos completamente sucias, para el reconocido Ecommerce Shein utilizando R.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/rolivaresIA/Data_Cleaning_Project" class="button">Proyecto Completo</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Análisis exploratorio de datos en Twitch <br />
+										<h2><a href="https://github.com/rolivaresIA/EDA_Twitch">Análisis exploratorio de datos en Twitch <br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Twitch_Main.png" alt="" /></a>
-									<p style="text-align: center;">Proyecto que muestra paso a paso como podemos hacer análisis exploratorio en una base de datos. Se trabaja con datos de 
-										Twitch.
-									</p>
+									<a href="https://github.com/rolivaresIA/EDA_Twitch" class="image fit"><img src="images/Twitch_Main.png" alt="" /></a>
+									<p style="text-align: center;">Proyecto de Análisis Exploratorio de Datos (EDA) en Twtich. Este muestra el paso a paso, con el objetivo de concluir y tomar decisiones fundamentadas.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Proyecto Completo</a></li>
+										<li><a href="https://github.com/rolivaresIA/EDA_Twitch" class="button">Proyecto Completo</a></li>
 									</ul>
 								</article>
 								<article>
