--- a/index.html
+++ b/index.html
@@ -101,25 +101,25 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/rolivaresIA/EDA_Twitch" class="image fit"><img src="images/Twitch_Main.png" alt="" /></a>
-									<p style="text-align: center;">Proyecto de Análisis Exploratorio de Datos (EDA) en Twtich. Este muestra el paso a paso, con el objetivo de concluir y tomar decisiones fundamentadas.</p>
+									<p style="text-align: center;">Proyecto que busca ayudar a streamers emergentes a escalar sus comunidades mediante información analizada, de forma estratégica en Twitch.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/rolivaresIA/EDA_Twitch" class="button">Proyecto Completo</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Visualización de datos<br />
+										<h2><a href="https://github.com/rolivaresIA/Visualizacion_Datos_MINSAL">Análisis y Visualización de datos MINEDUC<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/el-poder-de-la-visualizacion-diseno-de-dashboards-y-visualizacion-de-datos.webp" alt="" /></a>
-									<p style="text-align: center;">Proyecto que ilustra cómo transformar grandes volúmenes de datos en visualizaciones interactivas y comprensibles para la toma de decisiones en un negocio.</p>
+									<a href="https://github.com/rolivaresIA/Visualizacion_Datos_MINSAL" class="image fit"><img src="images/Mineduc.png" alt="" /></a>
+									<p style="text-align: center;">Proyecto que utiliza R y Power BI para analizar datos educativos, convirtiendo información compleja en visualizaciones interactivas para la toma de decisiones.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Proyecto Completo</a></li>
+										<li><a href="https://github.com/rolivaresIA/Visualizacion_Datos_MINSAL" class="button">Proyecto Completo</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Webscraping utilizando R<br />
+										<h2><a href="#">Webscraping en MercadoLibre utilizando R<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Web-Scraping-With-R.png" alt="" /></a>
