--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 										<h2><a href="#">Webscraping en MercadoLibre utilizando R<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Web-Scraping-With-R.png" alt="" /></a>
-									<p style="text-align: center;">Proyecto que demuestra cómo utilizar R para extraer, limpiar y analizar datos de diversas fuentes web, transformándolos en información útil y estructurada.</p>
+									<a href="#" class="image fit"><img src="images/Mercado-Libre.jpg" alt="" /></a>
+									<p style="text-align: center;">Proyecto que utiliza web scraping con R para extraer información de MercadoLibre, con el objetivo de analizar datos y obtener insights estratégicos del mercado.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Proyecto Completo</a></li>
 									</ul>
