--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Mercado-Libre.jpg" alt="" /></a>
-									<p style="text-align: center;">Proyecto que utiliza web scraping con R para extraer información de MercadoLibre, con el objetivo de analizar datos y obtener insights estratégicos del mercado.</p>
+									<p style="text-align: center;">Proyecto que utiliza web scraping con R para extraer información de MercadoLibre, con el objetivo de analizar datos y obtener insights estratégicos.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Proyecto Completo</a></li>
 									</ul>
