--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         .image.fit img {
             width: 100%; /* La imagen ocupa todo el ancho disponible */
             height: 400px; /* Mantiene la proporción de la imagen */
-            max-height: 400px; /* Limita la altura máxima de la imagen */
-            object-fit: 300px; /* Evita el recorte y ajusta la imagen dentro del contenedor */
+            max-height: 320px; /* Limita la altura máxima de la imagen */
+            object-fit: 100px; /* Evita el recorte y ajusta la imagen dentro del contenedor */
         }
 
         /* Estilo para el contenedor de la imagen */
         .image.fit {
-            width: 100%; /* El contenedor ocupa todo el ancho disponible */
+            width: 90%; /* El contenedor ocupa todo el ancho disponible */
             max-width: 800px; /* Limita el tamaño máximo del contenedor */
             margin: 10px auto; /* Centra el contenedor en la página */
             display: block;
@@ -38,8 +38,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Rodolfo Olivares<br />
-						Portfolio</h1>
+						<h1>Portfolio de Proyectos<br />
+						Rodolfo Olivares</h1>
 						<p>Data Analyst con experiencia en R, Python, SQL y Power BI<a href="https://html5up.net/license"></a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -64,23 +64,26 @@
 						</ul>
 					</nav>
 
-				<!-- Main -->
-					<div id="main">
+					<!-- Main -->
+						<div id="main">
 
-						<!-- Featured Post -->
+							<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Machine Learning:<br />
-									Predicción de fallas de maquinaria en Salfa</a></h2>
-									<p>Proyecto que busca predecir fallas de maquinarias mediante herramientas de Machine Learning, específicamente<br />
-									utilizando modelo de Random Forest con el objetivo de clasificar fallas, para posteriormente detectar<br />
+									<h1><a href="https://github.com/rolivaresIA/ML_Prediccion_Fallas_Maquinaria">Machine Learning:<br />
+									Predicción de fallas de maquinaria en Salfa</a></h1>
+									<p>Proyecto que busca predecir fallas de maquinarias mediante el uso de telemetría y herramientas de Machine Learning, específicamente
+									utilizando modelo de Random Forest. Con el objetivo principal de clasificar fallas, detectar
 									oportunidades de negocio y tomar acción comercial proactiva.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/telemetria.jpeg" alt="" /></a>
+								<a href="https://github.com/rolivaresIA/ML_Prediccion_Fallas_Maquinaria" class="image main">
+									<img src="images/telemetria.jpeg" alt="" style="height:700px; object-fit:cover;" />
+								</a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Proyecto Completo</a></li>
+									<li><a href="https://github.com/rolivaresIA/ML_Prediccion_Fallas_Maquinaria" class="button large">Proyecto Completo</a></li>
 								</ul>
 							</article>
+
 
 						<!-- Posts -->
 							<section class="posts">
@@ -89,8 +92,8 @@
 										<h2><a href="https://github.com/rolivaresIA/Data_Cleaning_Project">Limpieza y<br />
 											transformación de datos</a></h2>
 									</header>
-									<a href="https://github.com/rolivaresIA/Data_Cleaning_Project" class="image fit"><img src="images/datacleaning.png" alt="" /></a>
-									<p style="text-align: center;">Proyecto enfocado a la limpieza y transformación de bases de datos completamente sucias, para el reconocido Ecommerce Shein utilizando R.</p>
+									<a href="https://github.com/rolivaresIA/Data_Cleaning_Project" class="image fit"><img src="images/datacleaning.png" alt="" style="margin-bottom: 20px;"></a>
+									<p style="text-align: center; font-size: 19px;">Proyecto enfocado a la limpieza y transformación de bases de datos completamente sucias para el reconocido Ecommerce Shein, utilizando R.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/rolivaresIA/Data_Cleaning_Project" class="button">Proyecto Completo</a></li>
 									</ul>
@@ -100,8 +103,8 @@
 										<h2><a href="https://github.com/rolivaresIA/EDA_Twitch">Análisis exploratorio de datos en Twitch <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/rolivaresIA/EDA_Twitch" class="image fit"><img src="images/Twitch_Main.png" alt="" /></a>
-									<p style="text-align: center;">Proyecto que busca ayudar a streamers emergentes a escalar sus comunidades mediante información analizada, de forma estratégica en Twitch.</p>
+									<a href="https://github.com/rolivaresIA/EDA_Twitch" class="image fit"><img src="images/Twitch_Main.png" alt="" style="margin-bottom: 20px;"></a>
+									<p style="text-align: center; font-size: 19px;">Proyecto que busca ayudar a streamers emergentes a escalar sus comunidades mediante información analizada, de forma estratégica en Twitch.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/rolivaresIA/EDA_Twitch" class="button">Proyecto Completo</a></li>
 									</ul>
@@ -111,21 +114,21 @@
 										<h2><a href="https://github.com/rolivaresIA/Visualizacion_Datos_MINSAL">Análisis y Visualización de datos MINEDUC<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/rolivaresIA/Visualizacion_Datos_MINSAL" class="image fit"><img src="images/Mineduc.png" alt="" /></a>
-									<p style="text-align: center;">Proyecto que utiliza R y Power BI para analizar datos educativos, convirtiendo información compleja en visualizaciones interactivas para la toma de decisiones.</p>
+									<a href="https://github.com/rolivaresIA/Visualizacion_Datos_MINSAL" class="image fit"><img src="images/Mineduc.png" alt="" style="margin-bottom: 20px;"></a>
+									<p style="text-align: center; font-size: 19px;">Proyecto que utiliza R y Power BI para analizar datos educativos, convirtiendo información compleja en visualizaciones interactivas para la toma de decisiones.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/rolivaresIA/Visualizacion_Datos_MINSAL" class="button">Proyecto Completo</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Webscraping en MercadoLibre utilizando R<br />
+										<h2><a href="https://github.com/rolivaresIA/Webscraping_Mercadolibre">Webscraping en MercadoLibre utilizando R<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Mercado-Libre.jpg" alt="" /></a>
-									<p style="text-align: center;">Proyecto que utiliza web scraping con R para extraer información de MercadoLibre, con el objetivo de analizar datos y obtener insights estratégicos.</p>
+									<a href="https://github.com/rolivaresIA/Webscraping_Mercadolibre" class="image fit"><img src="images/Mercado-Libre-3.png" alt="" style="margin-bottom: 20px;"></a>
+									<p style="text-align: center; font-size: 19px;">Proyecto que utiliza web scraping con R para extraer información de MercadoLibre, con el objetivo de analizar datos y obtener insights estratégicos.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Proyecto Completo</a></li>
+										<li><a href="https://github.com/rolivaresIA/Webscraping_Mercadolibre" class="button">Proyecto Completo</a></li>
 									</ul>
 								</article>
 								
